<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
android:textAlignment="center"
        android:textSize="44sp"
android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"/>

    <EditText
        android:layout_marginTop="16sp"
        android:textSize="30sp"
        android:id="@+id/firstEd"
        android:text="First num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText

        android:layout_marginTop="16sp"
        android:textSize="30sp"
        android:id="@+id/secondEd"
        android:text="Second num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn"
        android:layout_marginTop="16sp"
        android:textSize="16sp"
android:text="Calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>